<resources>
    <string name="app_name">CInemas</string>
    <string name="Search_Text">Cari di M-Tix</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_the_premiere">The Premiere</string>
    <string name="lbl_points">POINTS</string>
    <string name="lbl_4000">4000</string>
    <string name="lbl_favorite">Favorite</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_watchlist_saya">Watchlist Saya</string>
    <string name="lbl_promo">Promo</string>
    <string name="lbl_level">LEVEL</string>
    <string name="lbl_semua">Semua</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_gold">GOLD</string>
    <string name="lbl_sedang_tayang">Sedang Tayang</string>
    <string name="lbl_semua_film">Semua Film</string>
    <string name="lbl_inbox">Inbox</string>
    <string name="lbl_not_registered">Not Registered</string>
    <string name="lbl_xxi">XXI</string>
    <string name="lbl_cari_di_m_tix">Cari di M-Tix</string>
    <string name="lbl_bandung">Bandung</string>
    <string name="lbl_imax">IMAX</string>
    <string name="lbl_account">Account</string>
    <string name="cari_di_m_tix">Cari di M-Tix</string>
    <string name="lbl_tue">TUE</string>
    <string name="lbl_thu">THU</string>
    <string name="lbl_01">01</string>
    <string name="lbl_02">02</string>
    <string name="lbl_27">27</string>
    <string name="lbl_28">28</string>
    <string name="lbl_03">03</string>
    <string name="lbl_26">26</string>
    <string name="lbl_04">04</string>
    <string name="lbl_9">9</string>
    <string name="lbl_imdb">IMDB</string>
    <string name="lbl_29">29</string>
    <string name="lbl_from_rp_25_000">From Rp.25.000</string>
    <string name="msg_a_quiet_place">A QUIET PLACE : DAY ONE</string>
    <string name="lbl_regular">REGULAR</string>
    <string name="lbl_8_5">8.5</string>
    <string name="lbl_synopsis">SYNOPSIS</string>
    <string name="lbl_30">30</string>
    <string name="msg_kisah_awal_mula">Kisah awal mula kehancuran. Hari pertama kenapa dunia menjadi sunyi! Sam (Lupita Nyong\u2019o) berusaha selamat dari invasi makhluk asing dengen pendengar.... READ MORE</string>
    <string name="msg_kisah_awal_mula2">Kisah awal mula kehancuran. Hari pertama kenapa dunia menjadi sunyi! Sam (Lupita Nyong\u2019o) berusaha selamat dari invasi makhluk asing dengen pendengar.... </string>
    <string name="lbl_sat">SAT</string>
    <string name="lbl_10">/10</string>
    <string name="lbl_review">REVIEW</string>
    <string name="lbl_ubertos_xxi">UBERTOS XXI</string>
    <string name="lbl_fri">FRI</string>
    <string name="msg_horror_99_mins">HORROR | 99 mins | 13+</string>
    <string name="lbl_read_more">READ MORE</string>
    <string name="lbl_wed">WED</string>
    <string name="lbl_sun">SUN</string>
    <string name="lbl_mon">MON</string>
    <string name="lbl_show">SHOW</string>
    <string name="lbl_tipe_studio">TIPE STUDIO</string>
    <string name="deskripsi_film_Aquite">Kisah awal mula kehancuran. Hari pertama kenapa dunia menjadi sunyi! Sam (Lupita Nyong’o) berusaha selamat dari invasi makhluk asing dengen pendengar.... READ MORE</string>
    <string name="lbl_nearby">NEARBY</string>
    <string name="lbl_14_40">14:40</string>
    <string name="lbl_26_juni">26 Juni</string>
    <string name="lbl_tersedia">Tersedia</string>
    <string name="lbl_tidak_tersedia">Tidak Tersedia</string>
    <string name="lbl_pilihanmu">Pilihanmu</string>
    <string name="msg_a_quite_place">A Quite Place : Day One</string>
    <string name="lbl_ubertos_xxi1">UBERTOS XXI</string>
    <string name="lbl_konfirmasi">Konfirmasi</string>
    <string name="lbl_99_mins">99 mins</string>
    <string name="lbl_english">English</string>
    <string name="lbl_1400mp">1400mp</string>
    <string name="lbl_pesanan_anda">Pesanan Anda</string>
    <string name="lbl_tiket">Tiket</string>
    <string name="lbl_2_tiket">2 Tiket</string>
    <string name="lbl_tanggal">Tanggal</string>
    <string name="msg_rab_26_juni_2024">Rab, 26 Juni 2024</string>
    <string name="lbl_waktu">Waktu</string>
    <string name="lbl_14_40_wib">14:40 WIB</string>
    <string name="lbl_detail_harga">Detail Harga</string>
    <string name="lbl_harga">Harga</string>
    <string name="lbl_rp_50_000">Rp. 50.000</string>
    <string name="lbl_rp_4_000">Rp. 4.000</string>
    <string name="lbl_biaya_layanan">Biaya Layanan</string>
    <string name="lbl_total_harga">Total Harga</string>
    <string name="lbl_rp_54_000">Rp. 54.000</string>
    <string name="lbl_pilih_voucher">Pilih Voucher</string>
    <string name="msg_selected_promo_code">Selected Promo Code</string>
    <string name="lbl_bayar_sekarang">Bayar Sekarang</string>
    <string name="msg_metode_pembayaran">Metode Pembayaran</string>
    <string name="msg_pilih_metode_pembayaran">Pilih metode pembayaran</string>
    <string name="lbl_e_wallet">E-Wallet</string>
    <string name="lbl_rp_100_000">Rp. 100.000</string>
    <string name="lbl_m_poin">M-Poin</string>
    <string name="lbl_4500_point">4500 Point</string>
    <string name="lbl_13113212312">13113212312</string>
    <string name="msg_4716_5615">4716 \u2022\u2022\u2022\u2022 \u2022\u2022\u2022\u2022 5615</string>
    <string name="lbl_06_24">06/24</string>
    <string name="lbl_add_bank_card">Add bank card</string>
    <string name="msg_bayar_rp_54_000">Bayar Rp. 54.000</string>
    <string name="lbl_ringkasan_order">Ringkasan Order</string>
    <string name="msg_tunjukan_kode_ini">Tunjukan kode ini kepada penjaga pintu studio</string>
    <string name="lbl_cinema">Cinema</string>
    <string name="lbl_studio">Studio</string>
    <string name="lbl_2">2</string>
    <string name="lbl_g7_g8">G7,G8</string>
    <string name="lbl_kursi">Kursi</string>
    <string name="lbl_cost">Harga</string>
    <string name="lbl_refund">Refund</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_profil">Profil</string>
    <string name="msg_kanjeng_ratu_euis">Kanjeng Ratu Euis Sumpena Kartasasmita</string>
    <string name="msg_kreskhitam12_gmail_com">KreskHitam12@gmail.com</string>
    <string name="lbl_rp_1_000_000">Rp. 1.000.000</string>
    <string name="lbl_rp_200_000">Rp. 200.000</string>
    <string name="lbl_voucher_saya">Voucher Saya</string>
    <string name="lbl_change_pin">Change Pin</string>
    <string name="msg_layanan_pengaduan">Layanan Pengaduan</string>
    <string name="lbl_akun_saya">Akun Saya</string>
</resources>